--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,18 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.4.3",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "^1.2.1",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.4.3",
     "bcryptjs": "^2.4.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.8.3",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
